@@ -4,9 +4,18 @@ python:
   - "2.7"
   - "3.3"
   - "3.4"
+
+sudo: required
+
+services:
+  - docker
+
+before_install:
+  - docker run -d -p 127.0.0.1:5000:5000 registry:2.6
+
 # command to install dependencies
 install:
-  - pip install .
+  - make install
 
 script:
-  - registryctl --url http://localhost:5000 --help
+  - make test
