@@ -1,3 +1,4 @@
-pbr<2.0,>=1.6
+pbr!=2.1.0,>=2.0.0
 requests
 cliff
+camelcase
