@@ -8,20 +8,22 @@ classifier =
     Programming Language :: Python :: 2.7
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.5
-version = 0.1
+version = 0.2
 
 [files]
 packages =
     registryctl
 
 [entry_points]
-registryctl.api =
-    catalog_list = registryctl.resources:CatalogList
-    catalog_show = registryctl.resources:CatalogShow
-    catalog_delete = registryctl.resources:CatalogDelete
-
 console_scripts =
     registryctl = registryctl.cli:main
+
+registryctl.cli =
+
+registryctl.catalog =
+    catalog_list = registryctl.catalog.resources:CatalogList
+    catalog_show = registryctl.catalog.resources:CatalogShow
+    catalog_delete = registryctl.catalog.resources:CatalogDelete
 
 [build_sphinx]
 all_files = 1
