@@ -3,5 +3,5 @@ import multiprocessing
 import setuptools
 
 setuptools.setup(
-    setup_requires=['pbr>=1.3'],
+    setup_requires=['pbr!=2.1.0,>=2.0.0'],
     pbr=True)
