@@ -1,4 +1,7 @@
 CHANGES
 =======
 
+* gitignore
+* Install and ci
+* Add informations
 * Initial commit
